--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "xinfox/fuiou",
   "type": "library",
-  "license": "Apache License 2.0",
+  "license": "Apache-2.0",
   "description": "富友API库",
   "authors": [
     {
