--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,9 @@
     "psr-4": {
       "XinFox\\Fuiou\\": "src"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5",
+    "mockery/mockery": "^1.4"
   }
 }
